--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pdfplumber==0.10.3
-openpyxl==3.1.5
-Pillow==10.1.0
-streamlit
+streamlit>=1.28.0
+pdfplumber>=0.9.0
+openpyxl>=3.0.0
+Pillow>=9.0.0
